// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphcool definition load basic yml 1`] = `
Object {
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "secret": "some-secret",
  "service": "jj",
  "stages": Object {
    "default": "shared-eu-west-1",
    "dev": "shared-eu-west-1",
  },
}
`;

exports[`graphcool definition load yml with disableAuth: true 1`] = `
Object {
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "disableAuth": true,
  "schema": "schemas/database.graphql",
  "service": "jj",
  "stages": Object {
    "default": "shared-eu-west-1",
    "dev": "shared-eu-west-1",
  },
}
`;

exports[`graphcool definition load yml with disableAuth: true 2`] = `null`;

exports[`graphcool definition load yml with secret and env var 1`] = `
Object {
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "secret": "this-is-a-long-secret",
  "service": "jj",
  "stages": Object {
    "default": "shared-eu-west-1",
    "dev": "shared-eu-west-1",
  },
}
`;

exports[`graphcool definition load yml with secret and env var in .env 1`] = `
Object {
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "secret": "this-is-very-secret,and-comma,seperated",
  "service": "jj",
  "stages": Object {
    "default": "shared-eu-west-1",
    "dev": "shared-eu-west-1",
  },
}
`;

exports[`graphcool definition load yml with secret and env var in .env 2`] = `
Array [
  "this-is-very-secret",
  "and-comma",
  "seperated",
]
`;

exports[`graphcool definition load yml without secret and expect it to throw 1`] = `[Error: Please either provide a secret in your graphcool.yml or disableAuth: true]`;

exports[`graphcool definition load yml without secret and expect it to throw 2`] = `
Object {
  "datamodel": Array [
    "datamodel.graphql",
  ],
  "schema": "schemas/database.graphql",
  "service": "jj",
  "stages": Object {
    "default": "shared-eu-west-1",
    "dev": "shared-eu-west-1",
  },
}
`;

exports[`graphcool definition load yml without secret and expect it to throw 3`] = `null`;
